style: add landing page display images and fix mobile scroll overflow

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -45,9 +45,7 @@ svg {
 	}
 
 	.footer__link {
-		padding-right: 1rem;
-		font-size: 0.6rem;
-		white-space: nowrap;
+		display: none;
 	}
 
 	.footer__text--center {
