--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@ body {
     --primary-color: #32302f;
     --secondary-color: #fcfcfc;
     --accent-color: #dddddd;
+    overscroll-behavior: none;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 body.dark-mode {
